# MasterData

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  memo.md
.github/workflows/: bump-release.yml  ci.yml  release.yml
apps/editor/: README.md  package-lock.json  package.json  vite.config.ts
apps/editor/src/: api.ts  store.ts  styles.css  types.ts
apps/editor/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/editor/src-tauri/capabilities/: default.json
apps/editor/src-tauri/src/: lib.rs
apps/editor/src/components/: AppShell.tsx  BottomPanel.tsx  EditorHost.tsx  FileExplorer.tsx  TableEditor.tsx  TagTokenInput.tsx
apps/editor/tools/: README.md
apps/master_data_editor/: EDITOR_SPEC.md  README.md  index.html  package-lock.json  package.json
apps/master_data_editor/src/: api.ts  editorUtils.ts  store.ts  styles.css
apps/master_data_editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/master_data_editor/tools/: README.md
crates/master-data-converter/: Cargo.toml
crates/master-data-core/: Cargo.toml
crates/master-data-core/assets/builder/: Program.cs
crates/master-data-core/assets/templates/csharp/: table.cs.tpl
crates/master-data-core/src/: build_input.rs  codegen.rs  config.rs  model.rs  project.rs
crates/master-data-init/: Cargo.toml
crates/master-data-init/src/: main.rs
crates/master_data_converter/: Cargo.toml
crates/master_data_converter/src/: main.rs
crates/master_data_core/src/: codegen.rs  config.rs  diagnostics.rs  lib.rs  project.rs  scan.rs  validate.rs
crates/master_data_init/: Cargo.toml
crates/master_data_init/src/: main.rs
docs/: architecture-notes.md
embedded/builder/: Lilja.MasterData.GeneratedBuilder.csproj  MasterData.GeneratedBuilder.csproj  Program.cs
embedded/builder/Builder/: BuildInput.cs  MasterMemoryBinaryBuilder.cs
embedded/templates/csharp/: enum.cs.tpl  struct.cs.tpl  table.cs.tpl
tools/release/: bump-version.py  create-macos-dmg.sh  sanitize-macos-dmg.sh  verify-macos-dmg.sh  write-release-metadata.py
(+26 files in other folders)
